cm4all-beng-proxy (0.7.39) unstable; urgency=low

  * memcached-stock: close value on connect failure

 --

cm4all-beng-proxy (0.7.38) unstable; urgency=low

  * http-server: send HTTP/1.1 declaration with "100 Continue"
  * connection: initialize "site_name", fixes crash bug
  * translation: added packet SECURE_COOKIE

 -- Max Kellermann <mk@cm4all.com>  Thu, 20 May 2010 15:40:34 +0200

cm4all-beng-proxy (0.7.37) unstable; urgency=low

  * *-client: implement a socket leak detector
  * handler: initialize response header without translation server

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 May 2010 12:05:11 +0200

cm4all-beng-proxy (0.7.36) unstable; urgency=low

  * http-client: fixed NULL pointer dereference
  * handler, response: removed duplicate request body destruction calls

 -- Max Kellermann <mk@cm4all.com>  Tue, 11 May 2010 17:16:36 +0200

cm4all-beng-proxy (0.7.35) unstable; urgency=low

  * {http,fcgi,ajp}-request: close the request body on abort
  * handler: set fake translation response on malformed URI

 -- Max Kellermann <mk@cm4all.com>  Mon, 10 May 2010 11:22:23 +0200

cm4all-beng-proxy (0.7.34) unstable; urgency=low

  * translate: check the UNTRUSTED packet
  * translation: added packet UNTRUSTED_PREFIX

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Apr 2010 19:14:37 +0200

cm4all-beng-proxy (0.7.33) unstable; urgency=low

  * merged release 0.7.27.1
  * fcache: don't continue storing in background
  * fcgi-client: re-add event after some input data has been read

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Apr 2010 11:31:08 +0200

cm4all-beng-proxy (0.7.32) unstable; urgency=low

  * response: generate the "Server" response header
  * response: support the Authentication-Info response header
  * response: support custom authentication pages
  * translation: support custom response headers

 -- Max Kellermann <mk@cm4all.com>  Tue, 27 Apr 2010 17:09:59 +0200

cm4all-beng-proxy (0.7.31) unstable; urgency=low
