@@ -21,29 +21,38 @@ const char *http_status_to_string_data[6][20] = {
     [2] = {
         [HTTP_STATUS_OK - 200] = "200 OK",
         [HTTP_STATUS_CREATED - 200] = "201 Created",
+        [HTTP_STATUS_ACCEPTED - 200] = "202 Accepted",
+        [HTTP_STATUS_NON_AUTHORITATIVE_INFORMATION - 200] = "203 Non-Authoritative Information",
         [HTTP_STATUS_NO_CONTENT - 200] = "204 No Content",
+        [HTTP_STATUS_RESET_CONTENT - 200] = "205 Reset Content",
         [HTTP_STATUS_PARTIAL_CONTENT - 200] = "206 Partial Content",
     },
     [3] = {
+        [HTTP_STATUS_MULTIPLE_CHOICES - 300] = "300 Multiple Choices",
         [HTTP_STATUS_MOVED_PERMANENTLY - 300] = "301 Moved Permanently",
         [HTTP_STATUS_FOUND - 300] = "302 Found",
         [HTTP_STATUS_SEE_OTHER - 300] = "303 See Other",
         [HTTP_STATUS_NOT_MODIFIED - 300] = "304 Not Modified",
+        [HTTP_STATUS_USE_PROXY - 300] = "305 Use Proxy",
         [HTTP_STATUS_TEMPORARY_REDIRECT - 300] = "307 Temporary Redirect",
     },
     [4] = {
         [HTTP_STATUS_BAD_REQUEST - 400] = "400 Bad Request",
         [HTTP_STATUS_UNAUTHORIZED - 400] = "401 Unauthorized",
+        [HTTP_STATUS_PAYMENT_REQUIRED - 400] = "402 Payment Required",
         [HTTP_STATUS_FORBIDDEN - 400] = "403 Forbidden",
         [HTTP_STATUS_NOT_FOUND - 400] = "404 Not Found",
         [HTTP_STATUS_METHOD_NOT_ALLOWED - 400] = "405 Method Not Allowed",
         [HTTP_STATUS_NOT_ACCEPTABLE - 400] = "406 Not Acceptable",
+        [HTTP_STATUS_PROXY_AUTHENTICATION_REQUIRED - 400] = "407 Proxy Authentication Required",
         [HTTP_STATUS_REQUEST_TIMEOUT - 400] = "408 Request Timeout",
         [HTTP_STATUS_CONFLICT - 400] = "409 Conflict",
         [HTTP_STATUS_GONE - 400] = "410 Gone",
         [HTTP_STATUS_LENGTH_REQUIRED - 400] = "411 Length Required",
         [HTTP_STATUS_PRECONDITION_FAILED - 400] = "412 Precondition Failed",
         [HTTP_STATUS_REQUEST_ENTITY_TOO_LARGE - 400] = "413 Request Entity Too Large",
+        [HTTP_STATUS_REQUEST_URI_TOO_LONG - 400] = "414 Request-URI Too Long",
+        [HTTP_STATUS_UNSUPPORTED_MEDIA_TYPE - 400] = "415 Unsupported Media Type",
         [HTTP_STATUS_REQUESTED_RANGE_NOT_SATISFIABLE - 400] = "416 Requested Range Not Satisfiable",
         [HTTP_STATUS_EXPECTATION_FAILED - 400] = "417 Expectation failed",
     },
