@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.39) unstable; urgency=low
 
   * memcached-stock: close value on connect failure
+  * http: implement remaining status codes
 
  --
 
